--- a/02. Partie réglementaire/Article R2124-77 - 24885207.md
+++ b/02. Partie réglementaire/Article R2124-77 - 24885207.md
@@ -1,28 +1,19 @@
 # Article R2124-77
 
-Les dispositions des articles R. 2124-64 à D. 2124-76 sont applicables aux personnels civils ou militaires de l'Etat et aux
-personnels civils des établissements publics de l'Etat qui occupent un logement dans un immeuble dépendant du domaine public
-de l'un de ces établissements, dans les conditions fixées par arrêté conjoint du ministre chargé des finances, du ministre
-chargé de la fonction publique, du ministre de la défense et du ministre chargé de l'outre-mer.
-
-Les établissements publics mentionnés au premier alinéa sont ceux dont les opérations financières et comptables sont
-effectuées par un agent comptable soumis à la juridiction de la Cour des comptes.
+Les conditions d'attribution de concessions de logement par les régions aux personnels de l'Etat employés dans les centres de
+ressources, d'expertise et de performance sportive sont fixées par les dispositions des articles R. 114-42 à R. 114-56 du
+code du sport.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Abrogé par_:
-
-  - Décret n°2012-752 du 9 mai 2012 - art. 1
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. A93-1 (V), ecqc les concessions de logement dans les immeubles appartenant aux établissements publics et dépendant de leur domaine public.
-  - Code du domaine de l'Etat - art. D13 (Ab), ecqc les concessions de logement dans les immeubles appartenant aux établissements publics et dépendant de leur domaine public.
+  - Décret n°2016-152 du 11 février 2016 - art. 3
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. R2222-19 (V)
+
+_Cite_:
+
+  - Code du sport. - art. R114-42 (V)
