--- a/01. Partie législative/Article L3212-2 - 6361449.md
+++ b/01. Partie législative/Article L3212-2 - 6361449.md
@@ -26,13 +26,12 @@ aux personnels des administrations concernées ;
 
 6° Les cessions de biens meubles, dont le ministère de la défense n'a plus l'emploi, à des associations ou organismes
 agissant pour la préservation ou la mise en valeur du patrimoine militaire, ou contribuant au renforcement du lien entre la
-Nation et son armée.
+Nation et son armée ;
+
+7° Les cessions des biens de scénographie dont l'Etat et ses établissements publics n'ont plus l'usage, au profit de toute
+personne agissant, à des fins non commerciales, dans le domaine culturel ou dans celui du développement durable.
 
 **Liens relatifs à cet article**
-
-_Modifié par_:
-
-  - Loi n°2009-928 du 29 juillet 2009 - art. 17
 
 _Cité par_:
 
@@ -45,6 +44,10 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. L5241-5 (VT)
   - Code général de la propriété des personnes publ... - art. L5441-5 (V)
   - Code général de la propriété des personnes publ... - art. R3212-2 (V)
+
+_Modifié par_:
+
+  - Loi n°2016-925 du 7 juillet 2016 - art. 106
 
 _Cite_:
 
