--- a/01. Partie législative/Article L2123-2 - 6361225.md
+++ b/01. Partie législative/Article L2123-2 - 6361225.md
@@ -2,16 +2,17 @@
 
 La gestion d'immeubles dépendant du domaine public de l'Etat peut être confiée, en vue d'assurer la conservation, la
 protection ou la mise en valeur du patrimoine national, à des collectivités territoriales ou à des établissements publics, à
-des sociétés d'aménagement foncier et d'établissement rural, ainsi qu'à des associations ou fondations reconnues d'utilité
-publique que leurs statuts habilitent à accomplir ces missions.
+des sociétés d'aménagement foncier et d'établissement rural, à des conservatoires régionaux d'espaces naturels agréés au
+titre de l'article L. 414-11 du code de l'environnement, ainsi qu'à des associations ou fondations reconnues d'utilité
+publique que leurs statuts habilitent à accomplir ces missions. 
 
 Les conditions et la durée de la gestion sont déterminées par une convention passée par l'Etat. Cette convention peut
 habiliter le gestionnaire à accorder des autorisations d'occupation ou à consentir des locations d'une durée n'excédant pas
 dix-huit ans. Elle peut l'autoriser à encaisser directement à son profit les produits de l'immeuble, à condition de supporter
 les charges correspondantes, de quelque nature qu'elles soient. Elle ne stipule pas l'exigibilité d'une redevance domaniale
-mais peut prévoir le versement périodique à l'Etat d'une partie des produits de la gestion.
+mais peut prévoir le versement périodique à l'Etat d'une partie des produits de la gestion. 
 
-En fin de gestion, le gestionnaire ne peut prétendre à aucune indemnité pour les améliorations apportées à l'immeuble.
+En fin de gestion, le gestionnaire ne peut prétendre à aucune indemnité pour les améliorations apportées à l'immeuble. 
 
 Un décret en Conseil d'Etat détermine les conditions d'application du présent article. Ce décret définit notamment les
 catégories d'immeubles domaniaux auxquels peuvent s'appliquer les dispositions ci-dessus, les règles applicables au
@@ -43,9 +44,16 @@ _Cité par_:
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2016-1087 du 8 août 2016 - art. 82
 
 _Anciens textes_:
 
-  - Code du domaine de l'Etat - art. R128-3 (M),  ecqc les conventions de gestion portant sur des immeubles dépendant du domaine public de l'Etat.
   - Code du domaine de l'Etat - art. L51-1 (Ab)
+
+_Cite_:
+
+  - Code de l'environnement - art. L414-11 (V)
