--- a/01. Partie législative/Article L5114-7 - 33162514.md
+++ b/01. Partie législative/Article L5114-7 - 33162514.md
@@ -20,8 +20,8 @@ fixé selon les règles applicables à l'aliénation des immeubles du domaine pr
 
 Lorsque la cession concerne un immeuble à usage d'habitation principale personnellement occupé par le demandeur, elle peut
 intervenir à un prix inférieur à la valeur vénale en fonction de l'ancienneté de l'occupation, des ressources du bénéficiaire
-et du nombre de personnes vivant au foyer, dans des conditions fixées par décret. Ce décret détermine notamment le plafond
-que la différence entre la valeur vénale et le prix de cession ne peut pas dépasser. 
+et du nombre de personnes vivant au foyer, dans des conditions fixées par décret. Ce décret fixe les conditions de cette
+décote, qui peut atteindre 95 % de la valeur vénale du bien considéré.
 
 La superficie cédée est ajustée en fonction des nécessités de l'équipement du secteur en voirie et réseaux divers et des
 conditions de cession des fonds voisins. Elle ne peut excéder un plafond fixé par arrêté du représentant de l'Etat.
@@ -36,15 +36,15 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. L5114-6 (V)
   - Code général de la propriété des personnes publ... - art. L5114-9 (V)
 
-_Créé par_:
+_Modifié par_:
 
-  - Ordonnance n°2016-1255 du 28 septembre 2016 - art. 3
-
-_Cite_:
-
-  - Code général de la propriété des personnes publ... - art. L5114-2 (V)
-  - Code général de la propriété des personnes publ... - art. L5114-4 (V)
+  - Loi n°2017-256 du 28 février 2017 - art. 115
 
 _Anciens textes_:
 
   - Code général de la propriété des personnes publ... - art. L5331-6-3 (VT)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiques. - art. L5114-2
+  - Code général de la propriété des personnes publiques. - art. L5114-4
