--- a/01. Partie législative/Article L2122-1 - 6361200.md
+++ b/01. Partie législative/Article L2122-1 - 6361200.md
@@ -3,11 +3,18 @@
 Nul ne peut, sans disposer d'un titre l'y habilitant, occuper une dépendance du domaine public d'une personne publique
 mentionnée à l'article L. 1 ou l'utiliser dans des limites dépassant le droit d'usage qui appartient à tous.
 
+Le titre mentionné à l'alinéa précédent peut être accordé pour occuper ou utiliser une dépendance du domaine privé d'une
+personne publique par anticipation à l'incorporation de cette dépendance dans le domaine public, lorsque l'occupation ou
+l'utilisation projetée le justifie.
+
+Dans ce cas, le titre fixe le délai dans lequel l'incorporation doit se produire, lequel ne peut être supérieur à six mois,
+et précise le sort de l'autorisation ainsi accordée si l'incorporation ne s'est pas produite au terme de ce délai.
+
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
 
 _Cité par_:
 
@@ -40,10 +47,14 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. R2122-53-2 (V)
   - Code général de la propriété des personnes publ... - art. R2123-3 (V)
 
+_Modifié par_:
+
+  - Ordonnance n°2017-562 du 19 avril 2017 - art. 2
+
 _Anciens textes_:
 
   - Code du domaine de l'Etat - art. L28 (Ab)
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L1 (V)
+  - Code général de la propriété des personnes publiques. - art. L1
