--- a/01. Partie législative/Article L5611-3 - 33163225.md
+++ b/01. Partie législative/Article L5611-3 - 33163225.md
@@ -2,188 +2,66 @@
 
 Sous la seule réserve des adaptations prévues par le présent livre et sauf mention contraire dans le tableau ci-après, les
 dispositions suivantes sont applicables en Polynésie française, au domaine public des communes, de leurs groupements et de
-leurs établissements publics, dans leur rédaction résultant de l'ordonnance n° 2006-460 du 21 avril 2006. 
+leurs établissements publics, dans leur rédaction résultant de l'ordonnance n° 2006-460 du 21 avril 2006.
 
-<table>
-  <tbody>
-    <tr>
-      <th>
+<pre>
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ DISPOSITIONS APPLICABLES                   ┃ DANS LEUR RÉDACTION                                                          ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ Dans la deuxième partie :                  ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2111-1 à L. 2111-3, L. 2111-15, L.      ┃                                                                              ┃
+┃ 2111-16, L. 2112-1 et L. 2121-1            ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2122-1, L. 2122-1-1 à L. 2122-1-4 et L. ┃ Résultant de l'ordonnance n° 2017-562 du 19 avril 2017                       ┃
+┃ 2122-2                                     ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2122-3 et L. 2122-4                     ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2123-1, L. 2123-3, L. 2123-6, première  ┃                                                                              ┃
+┃ phrase, L. 2123-7 et L. 2123-8             ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2124-32-1 à L. 2124-35                  ┃ Résultant de la loi n° 2014-626 du 18 juin 2014                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2125-1                                  ┃ Résultant de l'ordonnance n° 2017-562 du 19 avril 2017                       ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2125-3 à L. 2125-6, L. 2131-1, L.       ┃                                                                              ┃
+┃ 2132-2 et L. 2132-20                       ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2132-21                                 ┃ Résultant de la loi n° 2016-1087 du 8 août 2016                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2132-26 à L. 2132-29 et L. 2141-1       ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2141-2                                  ┃ Résultant de l'ordonnance n° 2017-562 du 19 avril 2017                       ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2141-3, L. 2311-1, L. 2312-1 et L.      ┃                                                                              ┃
+┃ 2321-3                                     ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2321-4                                  ┃ Résultant de la loi n° 2008-561 du 17 juin 2008                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2321-5 et L. 2322-4                     ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2323-3 et L. 2323-5                     ┃ Résultant de la loi n° 2010-1658 du 29 décembre 2010 jusqu'à l'entrée en vi- ┃
+┃                                            ┃ gueur des dispositions de la loi n° 2014-58 du 27 janvier 2014               ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2323-10                                 ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2323-14                                 ┃ Résultant de l'ordonnance n° 2006-460 du 21 avril 2006 jusqu'à l'entrée en   ┃
+┃                                            ┃ vigueur des dispositions de la loi n° 2014-58 du 27 janvier 2014             ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 2331-1                                  ┃ Résultant de la loi n° 2010-853 du 23 juillet 2010                           ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ Dans la troisième partie :                 ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 3111-1 et L. 3112-1 à L. 3112-3         ┃                                                                              ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╂┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ L. 3112-4                                  ┃ Résultant de l'ordonnance n° 2017-562 du 19 avril 2017                       ┃
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┻━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+</pre>
 
-DISPOSITIONS APPLICABLES 
-
-</th>
-      <th>
-
-DANS LEUR RÉDACTION 
-
-</th>
-    </tr>
-    <tr>
-      <td align="left">
-
-Dans la deuxième partie : 
-
-</td>
-      <td align="left">
-    </td></tr>
-    <tr>
-      <td>
-
-L. 2111-1 à L. 2111-3, L. 2111-15 et L. 2111-16, L. 2112-1, L. 2121-1, L. 2122-1 à L. 2122-4, L. 2123-1, L. 2123-3, L. 2123-4
-et L. 2123-6, première phrase, L. 2123-7 et L. 2123-8 
-
-</td>
-      <td align="left">
-    </td></tr>
-    <tr>
-      <td>
-
-L. 2124-32-1 à L. 2124-35 
-
-</td>
-      <td>
-
-Résultant de la loi n° 2014-626 du 18 juin 2014 
-
-</td>
-    </tr>
-    <tr>
-      <td>
-
-L. 2125-1 
-
-</td>
-      <td>
-
-Résultant de la loi n° 2015-991 du 7 août 2015 
-
-</td>
-    </tr>
-    <tr>
-      <td>
-
-L. 2125-3 à L. 2125-6, L. 2131-1, L. 2132-2 et L. 2132-20 
-
-</td>
-      <td align="left">
-    </td></tr>
-    <tr>
-      <td>
-
-L. 2132-21 
-
-</td>
-      <td>
-
-Résultant de la loi n° 2016-1087 du 8 août 2016 
-
-</td>
-    </tr>
-    <tr>
-      <td>
-
-L. 2132-26 à L. 2132-29, L. 2141-1, L. 2141-3, L. 2311-1, L. 2312-1 et L. 2321-3 
-
-</td>
-      <td align="left">
-    </td></tr>
-    <tr>
-      <td>
-
-L. 2321-4 
-
-</td>
-      <td>
-
-Résultant de la loi n° 2008-561 du 17 juin 2008 
-
-</td>
-    </tr>
-    <tr>
-      <td>
-
-L. 2321-5 et L. 2322-4 
-
-</td>
-      <td align="left">
-    </td></tr>
-    <tr>
-      <td>
-
-L. 2323-3 et L. 2323-5 
-
-</td>
-      <td>
-
-Résultant de la loi n° 2010-1658 du 29 décembre 2010 jusqu'à l'entrée en vigueur des dispositions de la loi n° 2014-58 du 27
-janvier 2014 
-
-</td>
-    </tr>
-    <tr>
-      <td>
-
-L. 2323-10 
-
-</td>
-      <td align="left">
-    </td></tr>
-    <tr>
-      <td>
-
-L. 2323-14 
-
-</td>
-      <td>
-
-Résultant de l'ordonnance n° 2006-460 du 21 avril 2006 jusqu'à l'entrée en vigueur des dispositions de la loi n° 2014-58 du
-27 janvier 2014 
-
-</td>
-    </tr>
-    <tr>
-      <td>
-
-L. 2331-1 
-
-</td>
-      <td>
-
-Résultant de la loi n° 2010-853 du 23 juillet 2010 
-
-</td>
-    </tr>
-    <tr>
-      <td align="left">
-
-Dans la troisième partie : 
-
-</td>
-      <td align="left">
-    </td></tr>
-    <tr>
-      <td>
-
-L. 3111-1 et L. 3112-1 à L. 3112-3 
-
-</td>
-    </tr>
-  </tbody>
-</table>
 
 **Liens relatifs à cet article**
 
-_Cite_:
+_Modifié par_:
 
-  - Ordonnance n°2006-460 du 21 avril 2006
-  - Loi n°2008-561 du 17 juin 2008
-  - Loi n°2010-853 du 23 juillet 2010
-  - Loi n°2010-1658 du 29 décembre 2010
-  - Loi n°2014-58 du 27 janvier 2014
-  - Loi n°2014-626 du 18 juin 2014
-  - Loi n°2015-991 du 7 août 2015
-  - Loi n°2016-1087 du 8 août 2016
-
-_Créé par_:
-
-  - Ordonnance n°2016-1255 du 28 septembre 2016 - art. 8
+  - Ordonnance n°2017-562 du 19 avril 2017 - art. 13
