--- a/02. Partie réglementaire/Article R1212-5 - 24884681.md
+++ b/02. Partie réglementaire/Article R1212-5 - 24884681.md
@@ -1,11 +1,17 @@
 # Article R1212-5
 
 Lorsque le prix d'une des acquisitions mentionnées à l'article R. 1212-4 donne lieu à remploi en valeurs mobilières, les
-comptables publics remettent les fonds au prestataire de services d'investissement désigné par le vendeur, par contrat ou par
-autorité de justice, pour procéder à l'achat et requérir l'immatriculation des titres acquis en remploi.
+comptables publics remettent les fonds au prestataire de services d'investissement autre qu'une société de gestion de
+portefeuille désigné par le vendeur, par contrat ou par autorité de justice, pour procéder à l'achat et requérir
+l'immatriculation des titres acquis en remploi.
 
 La remise des fonds a lieu sur production d'une attestation du prestataire de services d'investissement certifiant la mission
 de remploi qui lui a été confiée.
+
+**Nota:**
+
+Conformément aux dispositions de l'article 20 du décret n° 2017-1253 du 9 août 2017 ces dispositions entrent en vigueur le 3
+janvier 2018.
 
 **Liens relatifs à cet article**
 
@@ -17,10 +23,10 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2017-1253 du 9 août 2017 - art. 13
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R1212-4 (V)
+  - Code général de la propriété des personnes publiques. - art. R1212-4
