--- a/01. Partie législative/Article L2124-3 - 6361235.md
+++ b/01. Partie législative/Article L2124-3 - 6361235.md
@@ -5,9 +5,9 @@ concessions d'utilisation du domaine public maritime comportant maintien des ter
 être accordées. Un décret en Conseil d'Etat fixe les conditions d'instruction et de délivrance de ces concessions. 
 
 Les concessions d'utilisation du domaine public maritime en dehors des ports font l'objet, avant leur approbation, d'une
-enquête publique réalisée conformément au chapitre III du titre II du livre Ier du code de l'environnement. Cette disposition
-n'est pas applicable aux concessions de plage, aux autorisations d'exploitation de cultures marines et aux ouvrages et
-installations soumis à l'octroi d'un titre minier.
+enquête publique réalisée en application de la section 1 du chapitre III du titre II du livre Ier du code de l'environnement.
+Cette disposition n'est pas applicable aux concessions de plage, aux autorisations d'exploitation de cultures marines et aux
+ouvrages et installations soumis à l'octroi d'un titre minier.
 
 **Liens relatifs à cet article**
 
@@ -17,7 +17,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Ordonnance n°2016-1060 du 3 août 2016 - art. 6
+  - Loi n°2018-148 du 2 mars 2018 - art. 4
 
 _Cité par_:
 
@@ -29,5 +29,7 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L2124-27 (V)
-  - Code de l'environnement -  Chapitre III : Participation du public aux déci... (V)
+  - Code général de la propriété des personnes publiques. - art. L2124-1
+  - Code général de la propriété des personnes publiques. - art. L2124-2
+  - Code général de la propriété des personnes publiques. - art. L2124-27
+  - Code de l'environnement
