--- a/02. Partie réglementaire/Article R1112-5 - 24884568.md
+++ b/02. Partie réglementaire/Article R1112-5 - 24884568.md
@@ -1,10 +1,7 @@
 # Article R1112-5
 
-Le droit de préemption de l'Etat est exercé dans les conditions fixées :
-
-1° En ce qui concerne les œuvres d'art, aux articles R. 123-1 à R. 123-8 du code du patrimoine ;
-
-2° En ce qui concerne les archives privées, aux articles R. 212-91 et R. 212-92 du même code.
+Le droit de préemption de l'Etat à l'égard des biens culturels est exercé dans les conditions fixées aux articles R. 123-1 à
+R. 123-8 du code du patrimoine.
 
 **Liens relatifs à cet article**
 
@@ -12,11 +9,10 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2018-630 du 17 juillet 2018 - art. 6
 
 _Cite_:
 
-  - Code du patrimoine. - art. R123-1 (V)
-  - Code du patrimoine. - art. R212-91 (V)
+  - Code du patrimoine - art. R123-1
