--- a/02. Partie réglementaire/Article R1112-6 - 24884570.md
+++ b/02. Partie réglementaire/Article R1112-6 - 24884570.md
@@ -1,7 +1,7 @@
 # Article R1112-6
 
-Le droit de préemption de la Bibliothèque nationale de France à l'égard des archives privées est exercé dans les conditions
-fixées par les articles R. 212-91 et R. 212-92 du code du patrimoine.
+Le droit de préemption de la Bibliothèque nationale de France à l'égard des biens culturels est exercé dans les conditions
+fixées aux articles R. 123-1 à R. 123-8 du code du patrimoine.
 
 **Liens relatifs à cet article**
 
@@ -9,10 +9,10 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2018-630 du 17 juillet 2018 - art. 6
 
 _Cite_:
 
-  - Code du patrimoine. - art. R212-91 (V)
+  - Code du patrimoine - art. R123-1
