--- a/02. Partie réglementaire/Article R1112-7 - 24884572.md
+++ b/02. Partie réglementaire/Article R1112-7 - 24884572.md
@@ -1,11 +1,7 @@
 # Article R1112-7
 
-L'Etat, à la demande et pour le compte des collectivités territoriales, exerce le droit de préemption dans les conditions
-fixées :
-
-1° En ce qui concerne les œuvres d'art, aux articles R. 123-1 à R. 123-8 du code du patrimoine ;
-
-2° En ce qui concerne les archives privées, aux articles R. 212-91 et R. 212-92 du même code.
+L'Etat, à la demande et pour le compte des collectivités territoriales, exerce le droit de préemption à l'égard des biens
+culturels dans les conditions fixées aux articles R. 123-1 à R. 123-8 du code du patrimoine.
 
 **Liens relatifs à cet article**
 
@@ -13,11 +9,10 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2018-630 du 17 juillet 2018 - art. 6
 
 _Cite_:
 
-  - Code du patrimoine. - art. R123-1 (V)
-  - Code du patrimoine. - art. R212-91 (V)
+  - Code du patrimoine - art. R123-1
