--- a/01. Partie législative/Article L2132-21 - 6361313.md
+++ b/01. Partie législative/Article L2132-21 - 6361313.md
@@ -1,8 +1,13 @@
 # Article L2132-21
 
-Sous réserve de dispositions législatives spécifiques, les agents de l'Etat assermentés à cet effet devant le tribunal de
-grande instance, les agents de police judiciaire et les officiers de police judiciaire sont compétents pour constater les
+Sous réserve de dispositions législatives spécifiques, les agents de l'Etat assermentés à cet effet devant le   tribunal
+judiciaire, les agents de police judiciaire et les officiers de police judiciaire sont compétents pour constater les
 contraventions de grande voirie.
+
+**Nota:**
+
+Conformément à l'article 36 de l'ordonnance n° 2019-964 du 18 septembre 2019, ces dispositions entrent en vigueur au 1er
+janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -18,8 +23,8 @@ _Cité par_:
   - Code de la route. - art. L330-2 (V)
   - Code de la route. - art. R330-3 (V)
   - Code des transports - art. L4313-2 (V)
-  - Code général de la propriété des personnes publ... - art. L2132-23 (V)
+  - Code général de la propriété des personnes publ... - art. L2132-23 (VD)
 
 _Modifié par_:
 
-  - Loi n°2016-1087 du 8 août 2016 - art. 111
+  - Ordonnance n°2019-964 du 18 septembre 2019 - art. 35 (VD)
